# bitcoin-embed

./: Cargo.toml  README.md
src/: envelope.rs  lib.rs  message.rs  tagged_data.rs  varint.rs
